[project]
name = "agno-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.2",
    "cryptography>=45.0.5",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "googlesearch-python>=1.3.0",
    "lancedb>=0.24.1",
    "mysql>=0.0.3",
    "openai>=1.96.0",
    "pypdf>=5.8.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.47.0",
    "uvicorn>=0.35.0",
]
